RESOLVED FIXED229201
REGRESSION(r280723): Protected HLS + EME playback fails with "temporary error"
https://bugs.webkit.org/show_bug.cgi?id=229201
Summary REGRESSION(r280723): Protected HLS + EME playback fails with "temporary error"
Jer Noble
Reported 2021-08-17 13:16:41 PDT
REGRESSION(r280723): Protected HLS + EME playback fails with "temporary error"
Attachments
Patch (2.25 KB, patch)
2021-08-17 13:22 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2021-08-17 13:17:12 PDT
Jer Noble
Comment 2 2021-08-17 13:22:52 PDT
EWS
Comment 3 2021-08-18 09:50:38 PDT
Committed r281193 (240637@main): <https://commits.webkit.org/240637@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435708 [details].
Note You need to log in before you can comment on or make changes to this bug.